--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <section class="galeria">
       <h2>Nuestro Estilo</h2>
       <div class="imagenes">
-        <img src="../paginasrandom/imagenes/pelo6.jpg" alt="Corte moderno">
-        <img src="../paginasrandom/imagenes//pelo7.jpg" alt="Corte moderno">
-        <img src="../paginasrandom/imagenes//pelo1.jpg" alt="Coloración profesional">
-        <img src="../paginasrandom/imagenes//pelo3.jpg" alt="Coloración profesional">
-        <img src="../paginasrandom/imagenes//pelo4.jpg" alt="Peinado elegante">
-        <img src="../paginasrandom/imagenes//pelo5.jpg" alt="Peinado elegante">
+        <img src="pelo6.jpg" alt="Corte moderno">
+        <img src="pelo7.jpg" alt="Corte moderno">
+        <img src="pelo1.jpg" alt="Coloración profesional">
+        <img src="pelo3.jpg" alt="Coloración profesional">
+        <img src="pelo4.jpg" alt="Peinado elegante">
+        <img src="pelo5.jpg" alt="Peinado elegante">
       </div>
     </section>
 
